Start setting up frontend

--- a/lxgg_frontend/index.html
+++ b/lxgg_frontend/index.html
@@ -4,9 +4,20 @@
         <title>LXGG</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Hello :)</h1>
+        <sidebar>
+            <a class="box active"></a>
+            <a class="box"></a>
+            <a class="box"></a>
+            <a class="box"></a>
+            <a class="box"></a>
+            <a class="box"></a>
+            <a class="user"></a>
+        </sidebar>
+        <main>main</main>
+        <footer>footer</footer>
     </body>
 </html>
