Add searchbar and side bar styling

--- a/lxgg_frontend/index.html
+++ b/lxgg_frontend/index.html
@@ -17,7 +17,14 @@
             <a class="box"></a>
             <a class="user"></a>
         </sidebar>
-        <main>main</main>
+        <main>
+            <div class="search-bar">
+                <input type="text" placeholder="Filter Containers">
+            </div>
+            <div class="panel">
+                Data
+            </div>
+        </main>
         <footer>footer</footer>
     </body>
 </html>
