Add remaining tabs

--- a/lxgg_frontend/index.html
+++ b/lxgg_frontend/index.html
@@ -9,12 +9,12 @@
     </head>
     <body>
         <sidebar>
-            <a class="box active"></a>
-            <a class="box"></a>
-            <a class="box"></a>
-            <a class="box"></a>
-            <a class="box"></a>
-            <a class="box"></a>
+            <a class="new"></a>
+            <a class="containers active"></a>
+            <a class="images"></a>
+            <a class="networking"></a>
+            <a class="host"></a>
+            <a class="settings"></a>
             <a class="user"></a>
         </sidebar>
         <main>
