--- a/lxgg_frontend/index.html
+++ b/lxgg_frontend/index.html
@@ -8,23 +8,11 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <sidebar>
-            <a class="new"></a>
-            <a class="containers active"></a>
-            <a class="images"></a>
-            <a class="networking"></a>
-            <a class="host"></a>
-            <a class="settings"></a>
-            <a class="user"></a>
-        </sidebar>
-        <main>
-            <div class="search-bar">
-                <input type="text" placeholder="Filter Containers">
-            </div>
-            <div class="panel">
-                Data
-            </div>
-        </main>
-        <footer>footer</footer>
+        <div id="app">
+        </div>
+
+        <script src="js/vue/vue.runtime.js"></script>
+        <script src="js/vue/vue-router.js"></script>
+        <script src="js/bundle.js"></script>
     </body>
 </html>
