--- a/lxgg_frontend/index.html
+++ b/lxgg_frontend/index.html
@@ -11,8 +11,8 @@
         <div id="app">
         </div>
 
-        <script src="js/vue/vue.runtime.js"></script>
-        <script src="js/vue/vue-router.js"></script>
+        <!-- <script src="js/vue/vue.runtime.js"></script> -->
+        <!-- <script src="js/vue/vue-router.js"></script> -->
         <script src="js/bundle.js"></script>
     </body>
 </html>
