--- a/lxgg_frontend/index.html
+++ b/lxgg_frontend/index.html
@@ -4,12 +4,12 @@
         <title>LXGG</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="/css/style.css" rel="stylesheet">
     </head>
     <body>
         <div id="app">
         </div>
 
-        <script src="js/bundle.js"></script>
+        <script src="/dist/main.js"></script>
     </body>
 </html>
