--- a/lxgg_frontend/index.html
+++ b/lxgg_frontend/index.html
@@ -4,12 +4,13 @@
         <title>LXGG</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/css/style.css" rel="stylesheet">
+        <link href="/static/css/style.css" rel="stylesheet">
+        <link rel="shortcut icon" href="/static/favicon.ico" />
     </head>
     <body>
         <div id="app">
         </div>
 
-        <script src="/dist/main.js"></script>
+        <script src="/static/dist/main.js"></script>
     </body>
 </html>
